--- a/acloudstore/src/main/AndroidManifest.xml
+++ b/acloudstore/src/main/AndroidManifest.xml
@@ -2,14 +2,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.entscheidungsbaum.ludetis.acloudstore">
 
+
     <uses-sdk
-        android:minSdkVersion="7"
+        android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+
+    <meta-data
+        android:name="com.google.android.gms.games.APP_ID"
+        android:value="@string/app_id" />
+    <meta-data
+        android:name="com.google.android.gms.appstate.APP_ID"
+        android:value="@string/app_id" />
+    <meta-data
+        android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <activity
             android:name="com.entscheidungsbaum.ludetis.acloudstore.ACloudStoreMainActivity"
             android:label="@string/app_name">
