--- a/acloudstore/build.gradle
+++ b/acloudstore/build.gradle
@@ -32,6 +32,7 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:18.0.+'
+    compile 'com.google.android.gms:play-services:4.0.30'
     // this is for your application
     // You must install or update the Support Repository through the SDK manager to use this dependency.
     // The Support Repository (separate from the corresponding library) can be found in the Extras category.
