--- a/acloudstore/build.gradle
+++ b/acloudstore/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "17.0.0"
+    buildToolsVersion "19.0.0"
 
     defaultConfig {
         minSdkVersion 8
@@ -31,7 +31,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:18.0.+'
+    compile 'com.android.support:support-v4:19.0.+'
+    compile 'com.android.support:appcompat-v7:19.0.+'
     compile 'com.google.android.gms:play-services:4.0.30'
     // this is for your application
     // You must install or update the Support Repository through the SDK manager to use this dependency.
