--- a/acloudstore/src/main/AndroidManifest.xml
+++ b/acloudstore/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name="com.entscheidungsbaum.ludetis.acloudstore.ACloudStoreMainActivity"
+            android:name="com.entscheidungsbaum.ludetis.keyvaluestore.ACloudStoreMainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
