added Redis based store using the Jedis library (added via gradle dependency). NOTE get and flush operations must be done in background, not UI thread, whenever a internet based store (like Redis) is used. For local stores this doesn't matter. Also added a stub for a file based store and improved the others.

--- a/acloudstore/src/main/AndroidManifest.xml
+++ b/acloudstore/src/main/AndroidManifest.xml
@@ -2,11 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.entscheidungsbaum.ludetis.acloudstore">
 
-
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="19" />
-
 
     <application
         android:allowBackup="true"
@@ -35,6 +33,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
