--- a/acloudstore/build.gradle
+++ b/acloudstore/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     compile 'com.android.support:support-v4:19.0.+'
     compile 'com.android.support:appcompat-v7:19.0.+'
     compile 'com.google.android.gms:play-services:4.2.42'
+    compile 'redis.clients:jedis:2.4.2'
+
     // this is for your application
     // You must install or update the Support Repository through the SDK manager to use this dependency.
     // The Support Repository (separate from the corresponding library) can be found in the Extras category.
